--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,6 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: modern-react-portfolio
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,10 +32,14 @@ jobs:
           node-version: '18'
           
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd modern-react-portfolio
+          npm ci
           
       - name: Build application
-        run: npm run build
+        run: |
+          cd modern-react-portfolio
+          npm run build
         env:
           NODE_ENV: production
           
