Update GitHub Actions workflow to use Node.js 20 and add debugging info
- Upgraded from Node.js 18 to 20 for better compatibility
- Added version logging for npm and node to help debug any issues

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           
       - name: Install dependencies
         run: |
           cd modern-react-portfolio
+          npm --version
+          node --version
           npm ci
           
       - name: Build application
