--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,7 @@ jobs:
         uses: actions/configure-pages@v4
         with:
           enablement: true
+        continue-on-error: true
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
