Add helpful deployment failure messaging
- Added continue-on-error to deployment step
- Shows clear instructions when deployment fails due to Pages not being enabled
- Provides direct link to repository Pages settings

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,3 +79,12 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        continue-on-error: true
+        
+      - name: Deployment Status
+        if: failure()
+        run: |
+          echo "⚠️ Deployment failed. Please enable GitHub Pages manually:"
+          echo "👉 Go to: https://github.com/${{ github.repository }}/settings/pages"
+          echo "👉 Set Source to 'GitHub Actions'"
+          echo "👉 Click Save"
